# pytimeslice

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md
docs/architecture/: 01_DOMAIN_LAYER.md  02_INFRASTRUCTURE_LAYER.md  03_APPLICATION_LAYER.md  04_INTERFACE_LAYER.md  README.md
examples/: basic_demo.py
src/fragmento_engine/application/: services.py
src/fragmento_engine/domain/: compositor.py  models.py  planner.py
src/fragmento_engine/infrastructure/: image_loader.py  image_writer.py
src/fragmento_engine/interface/: cli.py
tests/: test_image_writer.py  test_render_workflows.py
