[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fragmento-engine"
version = "0.1.0"
description = "A Python timeslice rendering engine for building composite images from frame sequences."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Abdullah Shahid" }]
license = { text = "MIT" }

dependencies = [
  "numpy",
  "Pillow",
]

keywords = [
  "image-processing",
  "timeslice",
  "photography",
  "numpy",
  "cli",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nxaden/fragmento-engine"
Repository = "https://github.com/nxaden/fragmento-engine"
Issues = "https://github.com/nxaden/fragmento-engine/issues"

[project.scripts]
fragmento = "fragmento_engine.interface.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"