[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytimeslice"
version = "0.1.0"
description = "A Python timeslice rendering library for building composite images from frame sequences."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [{ name = "Abdullah Shahid" }]
license = "MIT"

dependencies = [
  "numpy",
  "Pillow",
]

keywords = [
  "image-processing",
  "timeslice",
  "photography",
  "numpy",
  "cli",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "twine",
]

[project.urls]
Homepage = "https://github.com/nxaden/pytimeslice"
Repository = "https://github.com/nxaden/pytimeslice"
Issues = "https://github.com/nxaden/pytimeslice/issues"
Documentation = "https://github.com/nxaden/pytimeslice/tree/main/docs"

[project.scripts]
pytimeslice = "pytimeslice.interface.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
pytimeslice = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
